--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Principal">
+        <activity android:name=".Principal"
+            android:configChanges = "orientation"
+            android:screenOrientation = "portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +23,15 @@
         <activity
             android:name=".LinternaPantalla"
             android:label="@string/title_activity_linterna_pantalla"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme"
+            android:configChanges = "orientation"
+            android:screenOrientation = "portrait"></activity>
+        <activity
+            android:name=".Configuraciones"
+            android:label="Configuraciones"
+            android:theme="@style/AppTheme"
+            android:configChanges = "orientation"
+            android:screenOrientation = "portrait"></activity>
     </application>
 
 </manifest>
