--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" } //ColorPicker
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
