--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
             android:theme="@style/AppTheme"
             android:configChanges = "orientation"
             android:screenOrientation = "portrait"></activity>
+        <receiver android:name=".Button_Listener">
+            <intent-filter>
+                <action android:name="button_click"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
