--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Principal"
+            android:launchMode="singleTop"
             android:configChanges = "orientation"
             android:screenOrientation = "portrait">
             <intent-filter>
