--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.gzsoft.linternamaterialdesign"
         minSdkVersion 16
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
     compile 'com.github.QuadFlask:colorpicker:0.0.13' //ColorPicker
+    compile 'com.github.florent37:longshadow:1.0.1'
 }
